Fixed shifted input boxes in search box and input box

--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ p a:hover{
     text-align: center;
     height: 25px;
     width: 80%;
-    margin: 5px auto;
+    margin: 10px auto;
     font-size: 15px;
 }
 
@@ -217,8 +217,10 @@ p a:hover{
 }
 
 #search input{
+    box-sizing: border-box;
     height: 100%;
     width: 100%;
+    padding-top: 1%;
     padding-left: 7%;
     vertical-align: center;
     border-radius: 10px;
@@ -230,8 +232,7 @@ p a:hover{
     font-size: 1.3em;
     position: absolute;
     left: 1%;
-    top: 25%;
-    bottom: 25%;
+    top: 15%;
 }
 
 #scroll{
@@ -294,6 +295,7 @@ p a:hover{
 }
 
 #messagebox{
+    box-sizing: border-box;
     position: absolute;
     width: 90%;
     bottom: 1%;
